--- a/bufsbus-server/src/website/index.html
+++ b/bufsbus-server/src/website/index.html
@@ -18,6 +18,17 @@
 				color: #111;
 			}
 		</style>
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-GZRFZETBSH"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-GZRFZETBSH');
+		</script>
+
 	</head>
 	<body class="is-preload" style="background-color: #3A3A3A;">
 
