--- a/bufsbus-server/src/website/index.html
+++ b/bufsbus-server/src/website/index.html
@@ -25,13 +25,33 @@
 		window.dataLayer = window.dataLayer || [];
 		function gtag(){dataLayer.push(arguments);}
 		gtag('js', new Date());
-
 		gtag('config', 'G-GZRFZETBSH');
 		</script>
 
+		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+		<script>
+			document.addEventListener("DOMContentLoaded", function(){
+				getData();
+				setInterval(getData, 5000);
+			});
+
+			function getData() {
+				axios({
+					method: 'get', //통신 방식
+					url: 'http://localhost:3000/api', //통신할 페이지
+				}).then(response => {
+					for (key in response.data)
+						document.getElementById(key).innerText = response.data[key];
+					console.log('Time updated! ' + new Date().toISOString());
+				}).catch(error => {
+					console.log(error);
+				})
+			}
+		</script>
+
+
 	</head>
 	<body class="is-preload" style="background-color: #3A3A3A;">
-
 		<!-- Nav -->
 		<nav id="nav">
 			<ul class="container">
@@ -54,7 +74,7 @@
 							<h1 style="color: white;">부산외대 <b style="color: white;">버스정보</b></h1>
 						</header>
 						<p style="color: #DDDDDD;">상단 메뉴를 눌러 <strong style="color: white;">버스 정보</strong>를 빠르게 확인할 수 있습니다.</p>
-						<p style="color: #DDDDDD;">자동으로 10초마다 정보가 갱신됩니다.</p>
+						<p style="color: #DDDDDD;">5초마다 자동으로 정보가 갱신됩니다.</p>
 					</div>
 				</div>
 			</div>
@@ -70,33 +90,33 @@
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
 							<h3>부산외대 정류장</h3>
-							<p>5분 후 도착</p>
+							<p id='shuttle_unversity'>버스가 없습니다.</p>
 						</section>
 					</div>
 
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
 							<h3>외성생활관</h3>
-							<p>20분 후 도착</p>
+							<p id='shuttle_domitory'>버스가 없습니다.</p>
 						</section>
 					</div>
 					
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
 							<h3>범어사역</h3>
-							<p>30분 후 도착</p>
+							<p id='shuttle_beomeosa'>버스가 없습니다.</p>
 						</section>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
 							<h3>남산역</h3>
-							<p>10분 후 도착</p>
+							<p id='shuttle_namsan'>버스가 없습니다.</p>
 						</section>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
 							<h3>남산소방서</h3>
-							<p>13분 후 도착</p>
+							<p id='shuttle_fire'>버스가 없습니다.</p>
 						</section>
 					</div>
 				</div>
@@ -113,27 +133,27 @@
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
 							<h3>부산외대 → 남산역</h3>
-							<p>잠시후 도착</p>
+							<p id='town_bufs_namsan'>버스가 없습니다.</p>
 						</section>
 					</div>
 
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
 							<h3>부산외대 → 구서역</h3>
-							<p>15분 후 도착</p>
+							<p id='town_bufs_guseo'>버스가 없습니다.</p>
 						</section>
 					</div>
 					
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
 							<h3>남산역 → 부산외대</h3>
-							<p>17분 후 도착</p>
+							<p id='town_namsan_bufs'>버스가 없습니다.</p>
 						</section>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
 							<h3>구서역 → 부산외대</h3>
-							<p>20분 후 도착</p>
+							<p id='town_guseo_bufs'>버스가 없습니다.</p>
 						</section>
 					</div>
 				</div>
@@ -150,18 +170,14 @@
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
 							<h3>부산외대 → 노포동</h3>
-							<p>
-								33분 후 도착
-							</p>
+							<p id='city_nopo'>버스가 없습니다.</p>
 						</section>
 					</div>
 
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
 							<h3>부산외대 → 구서동</h3>
-							<p>
-								21분 후 도착
-							</p>
+							<p id='city_guseo'>버스가 없습니다.</p>
 						</section>
 					</div>
 				</div>
@@ -174,9 +190,9 @@
 				<div class="container">
 					<footer>
 						<ul id="copyright">
-							<li>
+							<!-- <li>
 								Today: 15
-							</li>
+							</li> -->
 							<li> Contact: jsg3600@naver.com</li>
 							<li>&copy; 2020. SG All rights reserved.</li>
 						</ul>
