--- a/bufsbus-server/src/website/index.html
+++ b/bufsbus-server/src/website/index.html
@@ -90,7 +90,7 @@
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
 							<h3>부산외대 정류장</h3>
-							<p id='shuttle_unversity'>버스가 없습니다.</p>
+							<p id='shuttle_university'>버스가 없습니다.</p>
 						</section>
 					</div>
 
