add google adsense

--- a/bufsbus-server/src/website/index.html
+++ b/bufsbus-server/src/website/index.html
@@ -19,6 +19,8 @@
 			}
 		</style>
 
+		<script data-ad-client="ca-pub-9683578332904753" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-GZRFZETBSH"></script>
 		<script>
