--- a/bufsbus-server/src/website/index.html
+++ b/bufsbus-server/src/website/index.html
@@ -87,33 +87,33 @@
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
 							<h3>부산외대 정류장</h3>
-							<p id='shuttle_university'>버스가 없습니다.</p>
+							<p id='shuttle_university'>불러오는 중...</p>
 						</section>
 					</div>
 
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
 							<h3>외성생활관</h3>
-							<p id='shuttle_domitory'>버스가 없습니다.</p>
+							<p id='shuttle_domitory'>불러오는 중...</p>
 						</section>
 					</div>
 					
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
 							<h3>범어사역</h3>
-							<p id='shuttle_beomeosa'>버스가 없습니다.</p>
+							<p id='shuttle_beomeosa'>불러오는 중...</p>
 						</section>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
 							<h3>남산역</h3>
-							<p id='shuttle_namsan'>버스가 없습니다.</p>
+							<p id='shuttle_namsan'>불러오는 중...</p>
 						</section>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
 							<h3>남산소방서</h3>
-							<p id='shuttle_fire'>버스가 없습니다.</p>
+							<p id='shuttle_fire'>불러오는 중...</p>
 						</section>
 					</div>
 				</div>
@@ -130,27 +130,27 @@
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
 							<h3>부산외대 → 남산역</h3>
-							<p id='town_bufs_namsan'>버스가 없습니다.</p>
+							<p id='town_bufs_namsan'>불러오는 중...</p>
 						</section>
 					</div>
 
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
 							<h3>부산외대 → 구서역</h3>
-							<p id='town_bufs_guseo'>버스가 없습니다.</p>
+							<p id='town_bufs_guseo'>불러오는 중...</p>
 						</section>
 					</div>
 					
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
 							<h3>남산역 → 부산외대</h3>
-							<p id='town_namsan_bufs'>버스가 없습니다.</p>
+							<p id='town_namsan_bufs'>불러오는 중...</p>
 						</section>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
 							<h3>구서역 → 부산외대</h3>
-							<p id='town_guseo_bufs'>버스가 없습니다.</p>
+							<p id='town_guseo_bufs'>불러오는 중...</p>
 						</section>
 					</div>
 				</div>
@@ -167,14 +167,14 @@
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
 							<h3>부산외대 → 노포동</h3>
-							<p id='city_nopo'>버스가 없습니다.</p>
+							<p id='city_nopo'>불러오는 중...</p>
 						</section>
 					</div>
 
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
 							<h3>부산외대 → 구서동</h3>
-							<p id='city_guseo'>버스가 없습니다.</p>
+							<p id='city_guseo'>불러오는 중...</p>
 						</section>
 					</div>
 				</div>
