--- a/bufsbus-server/src/website/index.html
+++ b/bufsbus-server/src/website/index.html
@@ -1,220 +1,224 @@
 <!DOCTYPE HTML>
 
 <html>
-	<head>
-		<title>부산외대 버스정보</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="apple-touch-icon" href="images/bufs.jpg" />
-		<link rel="apple-touch-icon-precomposed" href="images/bufs.jpg">
-		<link rel="apple-touch-startup-image" href="images/bufs.jpg" >
-		<link rel="shortcut icon" type="image/ico" href="images/bufs.jpg" />
-		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-		<style>
-				/* 	custom  */
-			.custom_black {
-				color: #111;
-			}
-		</style>
 
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-GZRFZETBSH"></script>
-		<script>
+<head>
+	<title>부산외대 버스정보</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="apple-touch-icon" href="images/bufs.jpg" />
+	<link rel="apple-touch-icon-precomposed" href="images/bufs.jpg">
+	<link rel="apple-touch-startup-image" href="images/bufs.jpg">
+	<link rel="shortcut icon" type="image/ico" href="images/bufs.jpg" />
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+	<style>
+		/* 	custom  */
+		.custom_black {
+			color: #111;
+		}
+	</style>
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-GZRFZETBSH"></script>
+	<script>
 		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
+		function gtag() { dataLayer.push(arguments); }
 		gtag('js', new Date());
 		gtag('config', 'G-GZRFZETBSH');
-		</script>
+	</script>
 
-		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-		<script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+	<script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
 
-		<script>
-			function getData() {
-				axios({
-					method: 'get',
-					url: 'http://bufsbus.kr/api',
-				}).then(response => {
-					let holiday = '평일';
-					for (key in response.data){
-						if (key === 'holiday')
-							holiday = response.data[key] === true ? '휴일' : '평일';
-						if (document.getElementById(key))
-							document.getElementById(key).innerText = response.data[key];
-					}
-					console.log(`${holiday} 시간표 업데이트 완료! ${dayjs().format('YYYY/MM/DD HH:mm:ss')}`);
-				}).catch(error => {
-					console.log(error);
-				})
-			}
-		</script>
+	<script>
+		function getData() {
+			axios({
+				method: 'get',
+				url: '/api',
+			}).then(response => {
+				let holiday = '평일';
+				for (key in response.data) {
+					if (key === 'holiday')
+						holiday = response.data[key] === true ? '휴일' : '평일';
+					if (document.getElementById(key))
+						document.getElementById(key).innerText = response.data[key];
+				}
+				console.log(`${holiday} 시간표 업데이트 완료! ${dayjs().format('YYYY/MM/DD HH:mm:ss')}`);
+			}).catch(error => {
+				console.log(error);
+			})
+		}
+	</script>
 
 
-	</head>
-	<body class="is-preload" style="background-color: #3A3A3A;">
-		<!-- Nav -->
-		<nav id="nav">
-			<ul class="container">
-				<li><a href="#top">메인</a></li>
-				<li><a href="#shuttle">셔틀 버스</a></li>
-				<li><a href="#town">마을 버스</a></li>
-				<li><a href="#city">시내 버스</a></li>
-			</ul>
-		</nav>
+</head>
 
-		<!-- Home -->
-		<article id="top" class="wrapper style1" style="background-color: #3A3A3A;" >
-			<div class="container">
-				<div class="row">
-					<div class="col-4 col-5-large col-12-medium">
-						<span class="image fit"><img src="images/bufs.jpg" alt="" /></span>
-					</div>
-					<div class="col-8 col-7-large col-12-medium">
-						<header>
-							<h1 style="color: white;">부산외대 <b style="color: white;">버스정보</b></h1>
-						</header>
-						<p style="color: #DDDDDD;">상단 메뉴를 눌러 <strong style="color: white;">버스 정보</strong>를 빠르게 확인할 수 있습니다.</p>
-						<p style="color: #DDDDDD;">5초마다 자동으로 정보가 갱신됩니다.</p>
-					</div>
+<body class="is-preload" style="background-color: #3A3A3A;">
+	<!-- Nav -->
+	<nav id="nav">
+		<ul class="container">
+			<li><a href="#top">메인</a></li>
+			<li><a href="#shuttle">셔틀 버스</a></li>
+			<li><a href="#town">마을 버스</a></li>
+			<li><a href="#city">시내 버스</a></li>
+		</ul>
+	</nav>
+
+	<!-- Home -->
+	<article id="top" class="wrapper style1" style="background-color: #3A3A3A;">
+		<div class="container">
+			<div class="row">
+				<div class="col-4 col-5-large col-12-medium">
+					<span class="image fit"><img src="images/bufs.jpg" alt="" /></span>
+				</div>
+				<div class="col-8 col-7-large col-12-medium">
+					<header>
+						<h1 style="color: white;">부산외대 <b style="color: white;">버스정보</b></h1>
+					</header>
+					<p style="color: #DDDDDD;">상단 메뉴를 눌러 <strong style="color: white;">버스 정보</strong>를 빠르게 확인할 수 있습니다.
+					</p>
+					<p style="color: #DDDDDD;">5초마다 자동으로 정보가 갱신됩니다.</p>
 				</div>
 			</div>
-		</article>
+		</div>
+	</article>
 
-		<!-- shuttle -->
-		<article id="shuttle" class="wrapper style2">
-			<div class="container">
-				<header>
-					<h2>외대 셔틀 버스 정보</h2>
-				</header>
-				<div class="row aln-center custom_black">
-					<div class="col-4 col-6-medium col-12-small">
-						<section class="box style1">
-							<h3>부산외대 정류장</h3>
-							<p id='shuttle_university'>불러오는 중...</p>
-						</section>
-					</div>
+	<!-- shuttle -->
+	<article id="shuttle" class="wrapper style2">
+		<div class="container">
+			<header>
+				<h2>외대 셔틀 버스 정보</h2>
+			</header>
+			<div class="row aln-center custom_black">
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
+						<h3>부산외대 정류장</h3>
+						<p id='shuttle_university'>불러오는 중...</p>
+					</section>
+				</div>
 
-					<div class="col-4 col-6-medium col-12-small">
-						<section class="box style1">
-							<h3>외성생활관</h3>
-							<p id='shuttle_domitory'>불러오는 중...</p>
-						</section>
-					</div>
-					
-					<div class="col-4 col-6-medium col-12-small">
-						<section class="box style1">
-							<h3>범어사역</h3>
-							<p id='shuttle_beomeosa'>불러오는 중...</p>
-						</section>
-					</div>
-					<div class="col-4 col-6-medium col-12-small">
-						<section class="box style1">
-							<h3>남산역</h3>
-							<p id='shuttle_namsan'>불러오는 중...</p>
-						</section>
-					</div>
-					<div class="col-4 col-6-medium col-12-small">
-						<section class="box style1">
-							<h3>남산소방서</h3>
-							<p id='shuttle_fire'>불러오는 중...</p>
-						</section>
-					</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
+						<h3>외성생활관</h3>
+						<p id='shuttle_domitory'>불러오는 중...</p>
+					</section>
+				</div>
+
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
+						<h3>범어사역</h3>
+						<p id='shuttle_beomeosa'>불러오는 중...</p>
+					</section>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
+						<h3>남산역</h3>
+						<p id='shuttle_namsan'>불러오는 중...</p>
+					</section>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
+						<h3>남산소방서</h3>
+						<p id='shuttle_fire'>불러오는 중...</p>
+					</section>
 				</div>
 			</div>
-		</article>
+		</div>
+	</article>
 
-		<!-- town -->
-		<article id="town" class="wrapper style3">
-			<div class="container">
-				<header>
-					<h2>금정 3번 마을 버스 정보</h2>
-				</header>
-				<div class="row aln-center custom_black">
-					<div class="col-4 col-6-medium col-12-small">
-						<section class="box style1">
-							<h3>부산외대 → 남산역</h3>
-							<p id='town_bufs_namsan'>불러오는 중...</p>
-						</section>
-					</div>
+	<!-- town -->
+	<article id="town" class="wrapper style3">
+		<div class="container">
+			<header>
+				<h2>금정 3번 마을 버스 정보</h2>
+			</header>
+			<div class="row aln-center custom_black">
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
+						<h3>부산외대 → 남산역</h3>
+						<p id='town_bufs_namsan'>불러오는 중...</p>
+					</section>
+				</div>
 
-					<div class="col-4 col-6-medium col-12-small">
-						<section class="box style1">
-							<h3>부산외대 → 구서역</h3>
-							<p id='town_bufs_guseo'>불러오는 중...</p>
-						</section>
-					</div>
-					
-					<div class="col-4 col-6-medium col-12-small">
-						<section class="box style1">
-							<h3>남산역 → 부산외대</h3>
-							<p id='town_namsan_bufs'>불러오는 중...</p>
-						</section>
-					</div>
-					<div class="col-4 col-6-medium col-12-small">
-						<section class="box style1">
-							<h3>구서역 → 부산외대</h3>
-							<p id='town_guseo_bufs'>불러오는 중...</p>
-						</section>
-					</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
+						<h3>부산외대 → 구서역</h3>
+						<p id='town_bufs_guseo'>불러오는 중...</p>
+					</section>
+				</div>
+
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
+						<h3>남산역 → 부산외대</h3>
+						<p id='town_namsan_bufs'>불러오는 중...</p>
+					</section>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
+						<h3>구서역 → 부산외대</h3>
+						<p id='town_guseo_bufs'>불러오는 중...</p>
+					</section>
 				</div>
 			</div>
-		</article>
+		</div>
+	</article>
 
-		<!-- city -->
-		<article id="city" class="wrapper style2">
-			<div class="container">
-				<header>
-					<h2>301번 시내 버스 정보</h2>
-				</header>
-				<div class="row aln-center custom_black">
-					<div class="col-4 col-6-medium col-12-small">
-						<section class="box style1">
-							<h3>부산외대 → 노포동</h3>
-							<p id='city_nopo'>불러오는 중...</p>
-						</section>
-					</div>
+	<!-- city -->
+	<article id="city" class="wrapper style2">
+		<div class="container">
+			<header>
+				<h2>301번 시내 버스 정보</h2>
+			</header>
+			<div class="row aln-center custom_black">
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
+						<h3>부산외대 → 노포동</h3>
+						<p id='city_nopo'>불러오는 중...</p>
+					</section>
+				</div>
 
-					<div class="col-4 col-6-medium col-12-small">
-						<section class="box style1">
-							<h3>부산외대 → 구서동</h3>
-							<p id='city_guseo'>불러오는 중...</p>
-						</section>
-					</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
+						<h3>부산외대 → 구서동</h3>
+						<p id='city_guseo'>불러오는 중...</p>
+					</section>
 				</div>
 			</div>
-		</article>
+		</div>
+	</article>
 
-        			<!-- link-->
+	<!-- link-->
 
-			<article id="link" class="wrapper style4">
-				<div class="container">
-					<footer>
-						<ul id="copyright">
-							<!-- <li>
+	<article id="link" class="wrapper style4">
+		<div class="container">
+			<footer>
+				<ul id="copyright">
+					<!-- <li>
 								Today: 15
 							</li> -->
-							<li> Contact: jsg3600@naver.com</li>
-							<li>&copy; 2020. SG All rights reserved.</li>
-						</ul>
-					</footer>
-				</div>
-			</article>
-		
-		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.scrolly.min.js"></script>
-		<script src="assets/js/browser.min.js"></script>
-		<script src="assets/js/breakpoints.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
-		<script>
-			document.addEventListener("DOMContentLoaded", function(){
-				getData();
-				setInterval(getData, 5000);
-			});
-		</script>
+					<li> Contact: jsg3600@naver.com</li>
+					<li>&copy; 2020. SG All rights reserved.</li>
+				</ul>
+			</footer>
+		</div>
+	</article>
 
-	</body>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+	<script>
+		document.addEventListener("DOMContentLoaded", function () {
+			getData();
+			setInterval(getData, 5000);
+		});
+	</script>
+
+</body>
+
 </html>
